--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,21 +7,25 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      id-token: write
+
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - uses: actions/setup-node@v3
-      with:
-        node-version: "18.x"
-        cache: npm
-        registry-url: 'https://npm.pkg.github.com'
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "18.x"
+          cache: npm
+          registry-url: "https://registry.npmjs.org"
 
-    - name: Publish NPM package
-      run: |
-        cd $GITHUB_WORKSPACE
-        npm ci
-        npm run build
-        npm publish
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+      - name: Publish NPM package
+        run: |
+          cd $GITHUB_WORKSPACE
+          npm ci
+          npm run build
+          npm publish --provenance --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
